Enum source_type {
  rss
  internal
}

Enum source_status {
  active
  error
  blocked
}

Enum cluster_algorithm {
  hdbscan
  kmeans
}

Enum scrape_status {
  pending           // baru diingest, belum dicoba scrape
  fast_ok           // berhasil via httpx + trafilatura
  fast_failed       // gagal fast path, masuk antrian Playwright
  playwright_ok     // berhasil via Playwright
  playwright_failed // gagal setelah 2x percobaan Playwright, tidak diretry
}

Table content_source {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar
  url varchar [unique]
  source_type source_type
  is_enabled bool [default: true]
  status source_status
  last_fetched_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table article {
  id uuid [pk, default: `gen_random_uuid()`]
  source_id uuid [not null, ref: > content_source.id]
  title varchar [not null]
  url varchar [unique, not null]
  first_paragraph text
  content text                      // full article body; NULL = belum di-scrape atau gagal
  scrape_status scrape_status       // NULL untuk artikel lama sebelum fitur ini live
  scrape_attempts int [default: 0]  // jumlah percobaan Playwright (max 2)
  published_at timestamp
  created_at timestamp [default: `now()`]

  indexes {
    source_id
    published_at
    scrape_status  // dipakai Playwright worker: WHERE scrape_status = 'fast_failed'
  }
}

// One active embedding per article. Switching embedding model = schema
// migration (vector dim) + re-embed everything. model_name + model_version
// keep audit trail of what generated the current vector.
Table article_embedding {
  id uuid [pk, default: `gen_random_uuid()`]
  article_id uuid [unique, ref: > article.id]
  model_name varchar [not null]
  model_version varchar
  embedding vector(768)
  created_at timestamp [default: `now()`]
}

// Raw GSC page-level metrics — one row per URL per period.
// Covers all pages returned by GSC (articles, tag pages, homepage).
// Soft-linked to article via page_url = article.url; no FK because not all
// pages exist in the article table. Scoring input only, never returned to FE.
Table gsc_page {
  id           uuid [pk, default: `gen_random_uuid()`]
  page_url     varchar [not null]
  clicks       int
  impressions  int
  ctr          float
  avg_position float
  period_start date [not null]
  period_end   date [not null]
  fetched_at   timestamp [default: `now()`]

  indexes {
    (page_url, period_start, period_end) [unique]
    period_start
  }
}

// Raw GSC site-level query metrics — one row per search query per period.
// Not linked to any page or article; captures what users searched for across
// the whole site. Scoring input only, never returned to FE.
Table gsc_query {
  id           uuid [pk, default: `gen_random_uuid()`]
  query        varchar [not null]
  clicks       int
  impressions  int
  ctr          float
  avg_position float
  period_start date [not null]
  period_end   date [not null]
  fetched_at   timestamp [default: `now()`]

  indexes {
    (query, period_start, period_end) [unique]
    period_start
  }
}

// Raw GSC page+query combinations — one row per (URL, query) per period.
// Answers "which queries drive traffic to which page". Soft-linked to
// gsc_page via page_url (no FK — period may differ). Scoring input only.
Table gsc_page_query {
  id           uuid [pk, default: `gen_random_uuid()`]
  page_url     varchar [not null, ref: > gsc_page.page_url]
  query        varchar [not null, ref: > gsc_query.query]
  clicks       int
  impressions  int
  ctr          float
  avg_position float
  period_start date [not null]
  period_end   date [not null]
  fetched_at   timestamp [default: `now()`]

  indexes {
    (page_url, query, period_start, period_end) [unique]
    page_url
    period_start
  }
}

// Reference-only. Read by the scoring job to flag underperforming internal
// articles as rewrite candidates (PRD §1). Never returned to the FE — only
// derived signals (e.g. cluster_insight.internal_underperformed) cross out.
Table article_gsc_metric {
  id uuid [pk, default: `gen_random_uuid()`]
  article_id uuid [ref: > article.id]
  clicks int
  impressions int
  ctr float
  avg_position float
  period_start date
  period_end date
  fetched_at timestamp [default: `now()`]

  indexes {
    (article_id, period_start, period_end) [unique]
  }
}

// Google Trends keyword + traffic. Articles surfaced by Trends are stored
// in `article` (linked via trend_signal_article) so they flow through the
// same embedding + clustering pipeline as RSS/internal articles.
Table trend_signal {
  id uuid [pk, default: `gen_random_uuid()`]
  keyword varchar [not null]
  interest_score float
  region varchar [default: 'ID']
  captured_at timestamp [not null]
  created_at timestamp [default: `now()`]

  indexes {
    (keyword, captured_at) [unique]
    captured_at
  }
}

Table trend_signal_article {
  trend_signal_id uuid [ref: > trend_signal.id]
  article_id uuid [ref: > article.id]

  indexes {
    (trend_signal_id, article_id) [pk]
    article_id
  }
}

Table cluster_run {
  id uuid [pk, default: `gen_random_uuid()`]
  algorithm cluster_algorithm
  algorithm_version varchar
  params jsonb
  started_at timestamp [default: `now()`]
  finished_at timestamp
  notes text
}

Table article_cluster {
  id uuid [pk, default: `gen_random_uuid()`]
  run_id uuid [ref: > cluster_run.id, delete: cascade]                       // D33: deleting an old run prunes its clusters
  parent_cluster_id uuid [ref: > article_cluster.id, delete: cascade]  // null = top-level; set when split from oversized cluster
  label varchar                                        // null on parent shells (too broad to label); set only on leaves
  centroid vector(768)
  member_count int
  is_current bool [default: true]
  created_at timestamp [default: `now()`]

  indexes {
    run_id
    is_current
    parent_cluster_id
  }
}

// relevance_score populated by clustering. main_entity and information_claims
// populated by the post-cluster analysis step: Gemma runs per article after
// scoring completes, ordered by published_at DESC within each cluster.
// Cache: before calling Gemma, query prior rows for the same article_id where
// information_claims IS NOT NULL — article content is stable so a prior run's
// extraction is valid to copy into the new row without re-calling Gemma.
Table article_cluster_member {
  cluster_id uuid [ref: > article_cluster.id, delete: cascade]  // D33: cascades when the cluster's run is pruned
  article_id uuid [ref: > article.id]
  relevance_score float
  main_entity text    // primary entity Gemma identifies from the article; null until analysis runs
  information_claims text[]  // factual claims Gemma extracts from the article; null until analysis runs

  indexes {
    (cluster_id, article_id) [pk]
    article_id
  }
}

Table cluster_insight {
  id uuid [pk, default: `gen_random_uuid()`]
  cluster_id uuid [ref: - article_cluster.id, delete: cascade]  // D33: cascades when the cluster's run is pruned
  trend_velocity float
  competitor_count int [not null, default: 0]
  trend_match_count int [not null, default: 0]
  weighted_trend_score float  // sum of interest_score from distinct trend signals matched in last 24h; captures actual search volume behind the topic
  tempo_covered boolean [not null, default: false]
  last_internal_days_ago int
  underperformed boolean [not null, default: false]
  tempo_gsc_impressions int [not null, default: 0]  // total GSC impressions from Tempo internal articles in this cluster (most recent period per article)
  gsc_demand_gap boolean [not null, default: false]  // true when trend_match_count > 0 AND tempo_gsc_impressions = 0; strongest opportunity signal
  competitor_freshness_days int  // median age (days) of competitor RSS articles in cluster; lower = topic still hot
  summary text[]  // deprecated: legacy per-article claim list from labeling/analysis.py (optional manual pipeline). New labeling writes the three structured columns below instead.
  what_happened text  // 1-2 sentence summary of the event, generated by labeling step from top-10 articles
  parties_involved text[]  // entities/parties mentioned in the cluster, generated by labeling step
  editorial_angle text  // 1 sentence editorial angle for newsroom, generated by labeling step
  desk_category text  // LLM-assigned desk (labeling step); /morning hard-filters on morning_allowed_desks
  user_need_category text  // LLM-assigned reader need (labeling step); /morning rejects morning_denied_user_needs
  user_need_distribution jsonb
  user_need_reps_tagged integer
  calculated_at timestamp [default: `now()`]
}

// One row per running pipeline group. Inserted by the pipeline-daemon
// before starting a group; deleted on completion. API checks for existence
// before sending pg_notify — presence means 409. Row persists on daemon crash
// until an operator clears it (D22).
Table pipeline_group_lock {
  group_name varchar [pk]  // 'ingest_embed' | 'cluster_label_score'
  locked_at timestamp [default: `now()`]
}